1999-11-26  John Harper  <john@dcs.warwick.ac.uk>

	* place-window.jl (place-window): adjust position for window
	gravity (mostly from merlin <merlin@merlin.org>)

	* slide-window.jl: new file, commands to move windows/groups
	incrementally

1999-11-25  John Harper  <john@dcs.warwick.ac.uk>

	* x-cycle.jl, workspace.jl, window-order.jl, viewport.jl,
	transient.jl, stacking.jl, smart-placement.jl, sm-save.jl,
	sm-load.jl, sm-init.jl, shading.jl, server.jl, sawmill.jl,
	sawmill-gaol.jl, rects.jl, place-window.jl, open-look.jl,
	mwm.jl, move-resize.jl, menus.jl, maximize.jl, keymaps.jl,
	keymap.jl, gtkrc.jl, groups.jl, group-funs.jl, gnome.jl,
	gnome-menu.jl, functions.jl, frames.jl, focus.jl, edges.jl,
	edge-flip.jl, customize.jl, custom.jl, auto-raise.jl: updated
	for single namespace and scheme-like function semantics

1999-11-20  John Harper  <john@dcs.warwick.ac.uk>

	* x-cycle.jl, workspace.jl, move-resize.jl, maximize.jl,
	group-funs.jl, frames.jl, edge-flip.jl, customize.jl: rewrote
	documentation for some options

1999-11-19  John Harper  <john@dcs.warwick.ac.uk>

	* sawmill.jl: check LC_ALL and LC_MESSAGES before LANG

	* gnome-menu.jl (gnome-menu-lang): look in LC_ALL before LANG
	(gnome-menu-read-desktop-entry): accept wider language types

	* sm-init.jl (sm-init): use process-id instead of getpid

	* viewport.jl, custom.jl: remerged viewport and workspace
	custom groups

	* viewport.jl (window-outside-workspace-p): fixed for off left
	or top of workspace

	* sawmill.jl: load i18n support when $LANG is defined and != `C'

1999-11-18  John Harper  <john@dcs.warwick.ac.uk>

	* transient.jl, auto-raise.jl: change some custom docs

	* workspace.jl, menus.jl, keymap.jl, group-funs.jl,
	gnome-menu.jl, frames.jl, customize.jl: mark strings for i18n

	* frames.jl (find-all-frame-styles): sort case-insensitively

1999-11-17  John Harper  <john@dcs.warwick.ac.uk>

	* sawmill-gaol.jl (sawmill-safe-functions): removed window-put
