@@ -7,7 +7,7 @@ Summary: a highly configurable and extensible X11 window manager
 Name: %{nam}
 Version: %{ver}
 Release: %{rel}
-Requires: librep >= 0.5, rep-gtk >= 0.5
+Requires: librep >= 0.8, rep-gtk >= 0.6
 Copyright: GPL
 Group: User Interface/Desktops
 Source: ftp://ftp.dcs.warwick.ac.uk/people/John.Harper/sawmill/sawmill-%{ver}.tar.gz
