@@ -1,5 +1,8 @@
 1999-11-26  John Harper  <john@dcs.warwick.ac.uk>
 
+	* keymaps.jl (custom-set-keymap): catch and ignore errors when
+	parsing event descriptions
+
 	* place-window.jl (place-window): adjust position for window
 	gravity (mostly from merlin <merlin@merlin.org>)
 
